<resources>
    <string name="app_name">Monisick</string>
    <string name="title_home">Dashboard</string>
    <string name="title_scan">Scan</string>
    <string name="title_history">History</string>

    <string name="placeholder_description">Health Monitor Placeholder</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="email_error">Invalid email format.</string>
    <string name="password_error">Password must at least 8 chars.</string>
    <string name="password_confirmation_hint">Confirm Password</string>
    <string name="name">Name</string>
    <string name="name_error">Name musn\'t be empty!</string>
    <string name="form_error">Form must be filled correctly.</string>

    <string name="input_name">Enter Your Username</string>
    <string name="input_email">Enter Your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="empty_pass">Password Empty</string>
    <string name="logout">logout</string>

    <string name="close_camera">Close Camera</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="flip_to_front_camera">Flip to Front Camera</string>
    <string name="pick_gallery">Pick a photo from gallery</string>
    <string name="access_denied">Access Denied</string>
    <string name="taking_photo_failed">Successfully take a photo</string>
    <string name="open_camera_failed">Failed to open camera.</string>

    <string name="no_data">Tidak Ada Data</string>
    <string name="update_log">Update</string>

    <string name="no_data_available">Belum Ada Data Monitoring</string>
    <string name="log">Catatan</string>
    <string name="_24_09_2024">24-09-2024</string>
    <string name="input_log">Tambahkan Catatan</string>
    <string name="save">Simpan</string>
    <string name="cancel">Batal</string>
    <string name="delete_button">Delete Button</string>
    <string name="medicine_name">Nama Obat</string>
    <string name="start_date">Tanggal Mulai Konsumsi Obat</string>
    <string name="end_date">Tanggal Selesai Konsumsi Obat</string>
    <string name="monitoring_schedule_input">Tambahkan Jadwal Monitoring</string>
    <string name="start_date_monitoring">Tanggal Mulai Monitoring</string>
    <string name="end_date_monitoring">Tanggal Selesai Monitoring</string>
    <string name="save_schedule">Simpan Jadwal</string>
    <string name="icon_monisick">Icon Monisick</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="dont_have_an_account_yet">Belum punya akun? </string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="username">Username</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="register">Daftar</string>
    <string name="already_have_an_account">Sudah punya akun?</string>
    <string name="medicine_quantity">Jumlah Obat</string>
    <string name="consumed_berfore_eat">Diminum Sebelum Makan</string>
    <string name="consumedd_after_eat">Diminum Setelah Makan</string>
    <string name="morning">Pagi</string>
    <string name="afternoon">Siang</string>
    <string name="night">Malam</string>
    <string name="add_schedule">Tambah Jadwal</string>
    <string name="add_log">Tambah Catatan</string>
    <string name="food_name">Nama Makanan</string>
    <string name="protein_0">Protein : 0</string>
    <string name="carbohydrates_0">Karbohidrat : 0</string>
    <string name="fats_0">Lemak : 0</string>
    <string name="mass_0g">Berat : 0g</string>
    <string name="close">Tutup</string>
    <string name="add_medicine">Tambah Obat</string>
    <string name="quantity_2">Jumlah Obat : 2</string>
    <string name="_17_01_2001">17/01/2001</string>
    <string name="_18_01_2001">18/01/2001</string>
    <string name="after_eat">Sesudah Makan</string>
    <string name="schedule_morning_afternoon_night">Jadwal : Pagi, Siang, Malam</string>
    <string name="_0_g">0 g</string>
    <string name="fat">Lemak</string>
    <string name="_10">10%</string>
    <string name="carbohydrate">Karbohidrat</string>
    <string name="_10g">10g%</string>
    <string name="protein">Protein</string>
    <string name="mass">Berat</string>
    <string name="icon_scan">Icon Scan</string>
    <string name="scan">Scan</string>
    <string name="schedule_name">Nama Jadwal</string>
    <string name="from_start_date_to_end_date">Dari : Tanggal Mulai Hingga : Tanggal Selesai</string>
    <string name="log_name">Nama Catatan</string>
    <string name="log_edit">Edit Catatan</string>
    <string name="breakfast">Sarapan</string>
    <string name="health_monitor">Monitor Kesehatan</string>
    <string name="periode_06_12_2024_08_12_2024">Periode : 06-12-2024 - 08-12-2024</string>
    <string name="title_toolbar">Judul toolbar</string>
    <string name="back_button">Back Button</string>
    <string name="empty_data">Data Kosong</string>
    <string name="add_your_medicine">Tambahkan Obat Anda</string>
    <string name="information">Keterangan</string>
    <string name="medicine_quantity_2">Jumlah Obat : 2</string>
    <string name="consumed_before_eat">Dikonsumsi : Sebelum Makan</string>
    <string name="consumed_time_morning_afternoon_night">Waktu Konsumsi : Pagi, Siang, Malam</string>
    <string name="consumed_medicine">Tanggal Konsumsi Obat : Tanggal Mulai - Tanggal Selesai</string>
    <string name="delete_medicine">Hapus Obat</string>
    <string name="keterangan_gizi">Keterangan Gizi</string>
    <string name="protein_0_g">Protein: 0 g</string>
    <string name="carbs_0_g">Carbs: 0 g</string>
    <string name="fats_0_g">Fats: 0 g</string>
    <string name="mass_0_g">Mass: 0 g</string>
    <string name="delete_food">Hapus Makanan</string>
    <string name="medicine_reminder">Pengingat Obat</string>
</resources>