<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/makananNameDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/food_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.3"
        android:background="?attr/colorOnSurface" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/keterangan_gizi"
        android:textAppearance="?attr/textAppearanceSubtitle1" />

    <TextView
        android:id="@+id/makananProteinDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/protein_0_g" />

    <TextView
        android:id="@+id/makananCarbsDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/carbs_0_g" />

    <TextView
        android:id="@+id/makananFatsDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fats_0_g" />

    <TextView
        android:id="@+id/makananMassDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mass_0_g" />

    <Button
        android:id="@+id/delete_makanan_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_food" />
</LinearLayout>