<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/medication_name_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/medicine_name"
        android:textSize="18sp"
        android:textStyle="bold" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.3"
        android:background="?attr/colorOnSurface" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/medication_consumption_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/consumed_before_eat"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/medication_time_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/consumed_time_morning_afternoon_night"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/medication_date_range_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/consumed_medicine"
        android:textSize="16sp" />

    <Button
        android:id="@+id/delete_medication_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_medicine" />
</LinearLayout>