<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/my_toolbar"
            layout="@layout/top_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/icon_monisick"
                android:src="@drawable/icon_moni" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:autofillHints="Username"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_person_24"
                android:drawablePadding="16dp"
                android:hint="@string/username"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="32dp"
                tools:ignore="RtlSymmetry,SpeakableTextPresentCheck"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="169dp"/>

            <com.capstone.monisick.ui.customview.EmailCustomView
                android:id="@+id/edt_email_daftar"
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_email_24"
                android:drawablePadding="16dp"
                android:hint="@string/email"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="32dp"
                tools:ignore="RtlSymmetry,SpeakableTextPresentCheck"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="169dp" />

            <com.capstone.monisick.ui.customview.PasswordCustomView
                android:id="@+id/edt_password_daftar"
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="32dp"
                android:paddingEnd="8dp"
                tools:ignore="SpeakableTextPresentCheck"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="261dp" />

            <com.capstone.monisick.ui.customview.PasswordCustomView
                android:id="@+id/edt_password_confirm"
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="32dp"
                android:paddingEnd="8dp"
                tools:ignore="SpeakableTextPresentCheck"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="261dp" />

            <Button
                android:id="@+id/btnDaftar"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/green1"
                android:text="@string/register"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="388dp" />

            <LinearLayout
                android:id="@+id/linearDaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/already_have_an_account"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="174dp"
                    tools:layout_editor_absoluteY="35dp" />

                <TextView
                    android:id="@+id/tvAlreadyAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/green1"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>